ingress-test/nginx-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    run: nginx-blue
