ingress-test/nginx-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-green
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    run: nginx-green
